// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test props Put label text on container element as title attribute 1`] = `
<div
  class="brz-ed--fat-icon"
  title="Test label"
>
  <div
    class="brz-ed--fat-icon__wrapper brz-ed--fat-icon__wrapper--inactive"
  >
    <span
      class="brz-ed--check-mark brz-ed--fat-check-icon__check brz-ed--check-mark__unchecked"
    />
  </div>
  <div
    class="brz-ed--fat-icon__label brz-ed--fat-icon__label--inactive"
  >
    Test label
  </div>
</div>
`;

exports[`Test props className should be className 1`] = `
<div
  class="className brz-ed--fat-icon"
  title="Test label"
>
  <div
    class="brz-ed--fat-icon__wrapper brz-ed--fat-icon__wrapper--inactive"
  >
    <span
      class="brz-ed--check-mark brz-ed--fat-check-icon__check brz-ed--check-mark__unchecked"
    />
  </div>
  <div
    class="brz-ed--fat-icon__label brz-ed--fat-icon__label--inactive"
  >
    Test label
  </div>
</div>
`;

exports[`Test props should be isActive true 1`] = `
<div
  class="brz-ed--fat-icon"
  title="Test label"
>
  <div
    class="brz-ed--fat-icon__wrapper brz-ed--fat-icon__wrapper--active"
  >
    <span
      class="brz-ed--check-mark brz-ed--fat-check-icon__check brz-ed--check-mark__unchecked"
    />
  </div>
  <div
    class="brz-ed--fat-icon__label brz-ed--fat-icon__label--active"
  >
    Test label
  </div>
</div>
`;

exports[`Test props should be isChecked true 1`] = `
<div
  class="brz-ed--fat-icon"
  title="Test label"
>
  <div
    class="brz-ed--fat-icon__wrapper brz-ed--fat-icon__wrapper--inactive"
  >
    <span
      class="brz-ed--check-mark brz-ed--fat-check-icon__check brz-ed--check-mark__checked"
    />
  </div>
  <div
    class="brz-ed--fat-icon__label brz-ed--fat-icon__label--inactive"
  >
    Test label
  </div>
</div>
`;
